--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 // Base styles
 @import"./utils/variables";
 @import"./base/base";
+@import"./components/container";
 @import"./utils/visually-hidden";
 
 // Header
