--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,14 +1,72 @@
-// $breakpoint(
-//   phone: 480px;
-//   table: 768px;
-//   desktop: 1200px;
+// $breakpoints(
+//   "phone": 480px,
+//   "table": 768px,
+//   "desktop": 1200px,
 // );
 
+
+
+
 .container {
-    width: 1200px;
+   
+    // width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+
+    //  phone screen 0px &>
+    @media screen and (min-width: 480px){
+        width: 480px;
+      
 }
-    
+
+ // tablet screen 768px &> 
+ @media screen and (min-width: 480px){
+    width: 768px;}
+
+//    desktop screen 1200px &>
+
+ @media screen and (min-width: 1200px){
+    width: 1200px;}
+
+ }
+ 
+//  phone screen 0px &>
+
+ 
+ 
+//     max-width: 480px;
+//     padding-left: 15px;
+//     padding-right: 15px;
+//     margin-left: auto;
+//     margin-right: auto;}
+    // padding-left: 15px;
+    // padding-right: 15px;
+    // margin-left: auto;
+    // margin-right: auto;
+
+
+ // tablet screen 768px &> 
+//  @media screen and (min-width: 768px){
+//     max-width: 738px;
+//     padding-left: 15px;
+//     padding-right: 15px;
+//     margin-left: auto;
+//     margin-right: auto;
+   
+
+ // desktop screen 1200px &>
+
+//  @media screen and (min-width: 1200px){
+//     max-width: 1200px;
+//     padding-left: 15px;
+//     padding-right: 15px;
+//     margin-left: auto;
+//     margin-right: auto;}
+
+
+
+
+
+ 
