--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -2,20 +2,53 @@
     .clients{
 
             &__title{
+                
                 font-weight: 700;
                 font-size: 36px;
                 line-height: 1.16;
                 text-align: center;
                 margin: 0;
+
+            @media screen and (max-width: 1199px) {
+                padding-top: 60px;
+                margin-bottom:30px ;
+              
+            }
+            @media screen and (min-width: 1200px) {
                 padding-top: 94px;
-                padding-bottom: 50px;
+                margin-bottom:50px ;
+              
+            }
+               
+
+
                 }
                 
                 &__list{
                       display: flex;
                       list-style: none;
-                      padding-bottom: 94px; 
-                      justify-content: center;}
+                      justify-content: center;
+                      padding-bottom: 60px;
+                      flex-wrap: wrap;
+
+                      @media screen and (max-width:767px) {
+                        flex-basis: calc((100% - 2 * 30px) / 2);
+                      }
+                      
+                      
+                      @media screen and (max-width:1199px ) {
+                      margin: -15px;
+              
+                        }
+                    // @media screen and (min-width:768px) {
+                    //     flex-basis: 33.333%;
+                    // }
+                    
+                    @media screen and (min-width:1200px) {
+                        padding-bottom: 94px; 
+                        flex-wrap: nowrap;
+                    }
+                    }
                       
             }
 
@@ -39,18 +72,34 @@
 
 
     .clients__item{ 
-         padding: 16px 32px;
+        padding: 16px 52px;
          border: 1px solid var(--clients-border-colour);
          border-radius: 4px;
          transition-property: all; 
           transition-duration: 250ms;
           transition-timing-function: 
           cubic-bezier(0.4, 0, 0.2, 1);
+         
+
+          @media screen and (min-width:768px ) {
+            padding: 16px 60px;
+          }
+
+          @media screen and (max-width:1199px ) {
+          margin: 15px;
+
+          }
+
+          @media screen and (min-width:1200px ) {
+            padding: 16px 32px;
+            &:not(:last-child) {margin-right: 30px;}
+          }
+          
       
 
    
 
-    &:not(:last-child) {margin-right: 30px;}
+   
 }
 
        
