--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -16,6 +16,15 @@
     margin-right: auto;
 
     //  phone screen 0px &>
+
+    @media screen and(max-width:479px) {
+        width: 100vw;
+        margin: 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    //  phone screen 480px &>
     @media screen and (min-width: 480px){
         width: 480px;
       
