--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -7,19 +7,51 @@
 
 
 .team{
-    padding-bottom: 94px;
-     padding-top: 94px; 
-     background-color: var(--button-backgroud-colour);
+//    padding for section team 480>  
 
-    
+padding-bottom: 60px;
+padding-top: 60px; 
+background-color: var(--button-backgroud-colour);
+
+ //    padding for section team 768>  
+ @media screen and (min-width: 768px) {}
+    // padding-bottom: 94px;
+    //  padding-top: 94px; 
+    //  background-color: var(--button-backgroud-colour);
+
+
+    //    padding for section team 1200>  
+   @media screen and (min-width: 1200px) {
+    padding-bottom: 94px;
+    padding-top: 94px; 
+   
+   }
+  
+  
 &__title{
+// team title for 480> 
 font-weight: 700;
-font-size: 36px;
-line-height: 1.16;
+font-size: 28px;
+line-height: 1.18;
 text-align: center;
-padding-bottom: 50px;
- margin: 0;
- color:var(--main-text-colour);
+padding-bottom: 30px;
+margin: 0;
+color:var(--main-text-colour);
+
+// team title for 768> 
+@media screen and (min-width: 768px) {}
+
+// team title for 1200>   
+    @media screen and (min-width: 1200px) {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.16;
+        text-align: center;
+        padding-bottom: 50px;
+        margin: 0;
+        color:var(--main-text-colour);}
+
+
 }
 
 }
@@ -32,6 +64,10 @@ padding-bottom: 50px;
 
 &:last-child{
     margin-right: 0;}
+
+
+
+
 }
 
     .team{
