--- a/css/main.css
+++ b/css/main.css
@@ -798,17 +798,8 @@ body {
 
 .clients__link {
   fill: var(--clients-border-colour);
-  width: 106px;
-  height: 60px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 .clients__icon {
   -webkit-transition-property: all;
@@ -820,6 +811,15 @@ body {
 }
 
 .clients__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 16px 52px;
   border: 1px solid var(--clients-border-colour);
   border-radius: 4px;
