--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -131,7 +131,7 @@
 
         @media screen and (max-width: 1199px) {
             padding-top: 60px;
-            margin-bottom:30px ;
+            margin-bottom: 30px;
           
         }
         @media screen and (min-width: 1200px) {
@@ -147,23 +147,18 @@
             &__list{
                   display: flex;
                   list-style: none;
-                  justify-content: center;
+                //   justify-content: center;
                   padding-bottom: 60px;
                   flex-wrap: wrap;
+                  
 
                   @media screen and (max-width:767px) {
-                    flex-basis: calc((100% - 2 * 30px) / 2);
+                    flex-basis: calc((100% - 30px) / 2);
+                    margin: -15px;
                   }
                   
                   
-                  @media screen and (max-width:1199px ) {
-                  margin: -15px;
-          
-                    }
-                // @media screen and (min-width:768px) {
-                //     flex-basis: 33.333%;
-                // }
-                
+                               
                 @media screen and (min-width:1200px) {
                     padding-bottom: 94px; 
                     flex-wrap: nowrap;
@@ -192,7 +187,7 @@
 .clients__item{ 
     display: flex; 
     align-items: center;
-  justify-content: center;
+  
     padding: 16px 52px;
      border: 1px solid var(--clients-border-colour);
      border-radius: 4px;
@@ -204,9 +199,10 @@
 
       @media screen and (min-width:768px ) {
         padding: 16px 60px;
+        justify-content: center;
       }
 
-      @media screen and (max-width:1199px ) {
+      @media screen and (max-width:767px ) {
       margin: 15px;
 
       }
