--- a/css/main.css
+++ b/css/main.css
@@ -776,9 +776,15 @@ body {
 }
 @media screen and (max-width: 767px) {
   .clients__list {
+    -ms-flex-preferred-size: calc((100% - 60px) / 2);
+        flex-basis: calc((100% - 60px) / 2);
+    margin: -15px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .clients__list {
     -ms-flex-preferred-size: calc((100% - 30px) / 2);
         flex-basis: calc((100% - 30px) / 2);
-    margin: -15px;
   }
 }
 @media screen and (min-width: 1200px) {
