--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -153,10 +153,12 @@
                   
 
                   @media screen and (max-width:767px) {
-                    flex-basis: calc((100% - 30px) / 2);
+                    flex-basis: calc((100% - 60px) / 2);
                     margin: -15px;
                   }
                   
+                  @media screen and (max-width:1199px) {
+                    flex-basis: calc((100% - 30px) / 2);}
                   
                                
                 @media screen and (min-width:1200px) {
