--- a/css/main.css
+++ b/css/main.css
@@ -746,18 +746,18 @@ body {
   fill: var(--second-text-colour);
 }
 
+.clients {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
 .clients__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
   margin: 0;
-}
-@media screen and (max-width: 1199px) {
-  .clients__title {
-    padding-top: 60px;
-    margin-bottom: 30px;
-  }
+  padding-top: 60px;
+  margin-bottom: 30px;
 }
 @media screen and (min-width: 1200px) {
   .clients__title {
@@ -770,32 +770,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   list-style: none;
-  padding-bottom: 60px;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-preferred-size: calc((100% - 60px) / 2);
-      flex-basis: calc((100% - 60px) / 2);
-}
-@media screen and (max-width: 1199px) {
-  .clients__list {
-    margin: -15px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .clients__list {
-    -ms-flex-preferred-size: calc((100% - 90px) / 3);
-        flex-basis: calc((100% - 90px) / 3);
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .clients__list {
-    padding-bottom: 94px;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-  }
+  padding-bottom: 94px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .clients__link {
@@ -813,13 +791,7 @@ body {
 }
 
 .clients__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 16px 52px;
+  padding: 16px 32px;
   border: 1px solid var(--clients-border-colour);
   border-radius: 4px;
   -webkit-transition-property: all;
@@ -829,26 +801,8 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 768px) {
-  .clients__item {
-    padding: 16px 60px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-@media screen and (max-width: 1199px) {
-  .clients__item {
-    margin: 15px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .clients__item {
-    padding: 16px 32px;
-  }
-  .clients__item:not(:last-child) {
-    margin-right: 30px;
-  }
+.clients__item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .clients__item .clients__link:hover .clients__icon {
