--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -7,9 +7,12 @@
                 line-height: 1.16;
                 text-align: center;
                 margin: 0;
-                padding-top: 60px;
-                margin-bottom:30px ; 
-
+               
+                @media screen and (max-width: 1199px) {
+                    padding-top: 60px;
+                    margin-bottom:30px ;   
+                }
+             
            
                 @media screen and (min-width: 1200px) {
                     padding-top: 94px;
@@ -21,9 +24,19 @@
                 &__list{
                       display: flex;
                       list-style: none;
-                      padding-bottom: 94px; 
-                      justify-content: center;}
+                      justify-content: center;
+                      gap: 30px;
                       flex-wrap:wrap;
+                      //   flex-wrap:wrap;
+                     
+                      @media screen and (max-width: 1199px) { padding-bottom: 60px;  }
+                      @media screen and (max-width: 768px) {flex-basis: calc((100% - 90px) / 2);}
+                      @media screen and (min-width: 768px) {flex-basis: calc((100% - 120px) / 3);}
+                      @media screen and (min-width: 1200px) {flex-wrap:nowrap; padding-bottom: 34px;  flex-basis: calc((100% - 150px) / 6);}
+                     
+                    }
+                  
+                   
             }
 
             .clients{
@@ -45,7 +58,7 @@
     .clients__item{ 
 
         
-         padding: 16px 32px;
+         
          border: 1px solid var(--clients-border-colour);
          border-radius: 4px;
          transition-property: all; 
@@ -54,12 +67,22 @@
           cubic-bezier(0.4, 0, 0.2, 1);
       
 
-   
+          @media screen and (max-width: 1199px){
+            padding: 16px 60px;
+         }
 
-    &:not(:last-child) {margin-right: 30px;}
+         @media screen and (min-width: 1200px){
+            padding-top:16px;
+            padding-right:32px ;
+            padding-bottom:16px;
+            padding-left:32px;
+         }
+         
+
+    
 }
 
-       
+// &:not(:last-child) {margin-right: 30px;}
                 
 
         .clients{
@@ -72,3 +95,5 @@
             &:hover,
             &:focus  {border: 1px solid var(--button-text-colour); }
             }
+
+            
