--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -74,8 +74,8 @@
                 width: 450px;
             }
 
-            @media screen and (min-width:768) {
-                min-width: 354px;
+            @media screen and (min-width:768px) {
+                width: 354px;
             }
             // width: 270px;
     
