--- a/css/main.css
+++ b/css/main.css
@@ -396,6 +396,11 @@ body {
     width: 354px;
   }
 }
+@media screen and (min-width: 768px) {
+  .features__item:nth-child(2n+1) {
+    margin-right: 30px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .features__item:not(:last-child) {
     margin-right: 30px;
