--- a/css/main.css
+++ b/css/main.css
@@ -726,11 +726,8 @@ body {
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 @media screen and (max-width: 767px) {
-  .team .team__item:nth-child(2n+1) {
+  .team .team__item:not(:last-child) {
     margin-bottom: 30px;
-  }
-  .team .team__item:last-child {
-    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 768px) {
