--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -52,9 +52,9 @@ padding-bottom: 30px;}
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 
 @media screen and(max-width:767px) {
-    &:nth-child(2n + 1){margin-bottom: 30px;}
+    &:not(:last-child){margin-bottom: 30px;}
     
-    &:last-child{margin-bottom: 0;}
+    // &:last-child{margin-bottom: 0;}
 }
 
 @media screen and (min-width:768px) {
