--- a/css/main.css
+++ b/css/main.css
@@ -1141,13 +1141,25 @@ body {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding-bottom: 94px;
+}
+@media screen and (max-width: 1199px) {
+  .samples {
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .samples {
+    padding-bottom: 94px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .samples {
+    gap: 30px;
+  }
 }
 
 .samples__item {
   display: inline-block;
-  margin-right: 30px;
-  margin-bottom: 30px;
   -webkit-transition-property: all;
   transition-property: all;
   -webkit-transition-duration: 250ms;
@@ -1155,11 +1167,22 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.samples__item:nth-child(3n) {
-  margin-right: 0;
+@media screen and (max-width: 767px) {
+  .samples__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
-.samples__item:nth-child(n+7) {
-  margin-bottom: 0;
+@media screen and (min-width: 768px) {
+  .samples__item {
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .samples__item {
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
+  }
 }
 
 .samples__item:hover {
@@ -1169,7 +1192,6 @@ body {
 .samples__item {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  margin-right: 28px;
 }
 
 .samples__title {
@@ -1188,11 +1210,44 @@ body {
 }
 
 .samples__blocks {
-  width: 370px;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
   border: 1px solid var(--filter-border-colour);
+}
+@media screen and (max-width: 767px) {
+  .samples__blocks {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .samples__blocks {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .samples__blocks {
+    width: 370px;
+  }
+}
+
+.samples__img {
+  height: 294px;
+}
+@media screen and (max-width: 767px) {
+  .samples__img {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .samples__img {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .samples__img {
+    width: 370px;
+  }
 }
 
 .rekurs {
@@ -1202,10 +1257,9 @@ body {
 
 .overlay {
   position: absolute;
-  width: 370px;
-  height: 294px;
   padding-left: 24px;
   padding-right: 24px;
+  height: 294px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1218,6 +1272,21 @@ body {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 767px) {
+  .overlay {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .overlay {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .overlay {
+    width: 370px;
+  }
 }
 
 .samples li:focus .overlay,
