--- a/sass/components/_portfolio-samples.scss
+++ b/sass/components/_portfolio-samples.scss
@@ -1,21 +1,47 @@
 .samples {
     display: flex;
     flex-wrap: wrap;
-    padding-bottom: 94px;}
+
+    @media screen and (max-width:1199px) {
+      padding-bottom: 60px; 
+    }
+    @media screen and (min-width:1200px) {
+      padding-bottom: 94px;
+    }
+    
+    @media screen and (min-width:768px){
+      gap: 30px;}
+ 
+ 
+   
+ 
+  }
+  
    
     .samples__item{
         display: inline-block;
-        margin-right: 30px; 
-        margin-bottom: 30px;
         transition-property: all; 
         transition-duration: 250ms;
         transition-timing-function: 
         cubic-bezier(0.4, 0, 0.2, 1);
     
-       
-    &:nth-child(3n){margin-right: 0;}
+        @media screen and (max-width:767px) {
+          &:not(:last-child){margin-bottom: 30px;}
+         }
+
+@media screen and (min-width:768px){
+  
+  flex-basis: calc((100% - 1 * 30px) / 2);}
+
+  @media screen and (min-width:1200px) {
+    flex-basis: calc((100% - 2 * 30px) / 3)
+  }
+
+    //     margin-right: 30px; 
+    //     margin-bottom: 30px;  
+    // &:nth-child(3n){margin-right: 0;}
     
-    &:nth-child(n + 7) {margin-bottom: 0;}
+    // &:nth-child(n + 7) {margin-bottom: 0;}
     }
 
 
@@ -24,7 +50,9 @@
    
     &:hover{
      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);}
- &{box-sizing: border-box; margin-right: 28px; }
+ &{box-sizing: border-box; 
+  
+}
     
     
  }
@@ -53,15 +81,38 @@
 
 
    .samples__blocks{
-    width: 370px;
+    
     padding-top: 20px;
     padding-bottom: 20px; 
     padding-left: 24px;
     border: 1px solid var(--filter-border-colour);
+    
+   @media screen and (max-width:767px) {
+    width: 450px;
+   }
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+    }
+    @media screen and (min-width:1200px) {
+      width: 370px;
+    }
       }
-//    .samples__blocks{border: 1px solid var(--filter-border-colour);}
 
-
+      .samples__img{
+        height: 294px;
+        @media screen and (max-width:767px) {
+          width: 450px;
+         }
+      
+          @media screen and (min-width: 768px) {
+            width: 354px;
+          }
+          @media screen and (min-width:1200px) {
+            width: 370px;
+          }
+       
+          }
 //    Ховер на портфолио
 
 
@@ -72,10 +123,9 @@
   } 
   .overlay { 
     position: absolute; 
-    width: 370px; 
-    height: 294px; 
     padding-left: 24px; 
     padding-right: 24px; 
+    height: 294px;
     display: flex; 
     color:  var(--second-text-colour); 
     font-size: 18px; 
@@ -83,6 +133,22 @@
     letter-spacing: 0.54px; 
     background-color: rgba(33, 150, 243, 0.9); 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
+    @media screen and (max-width:767px) {
+      width: 450px;
+     }
+  
+      @media screen and (min-width: 768px) {
+        width: 354px;
+      }
+      @media screen and (min-width:1200px) {
+        width: 370px; 
+      }
+   
+    
+
+
+
   } 
    
   .samples li:focus .overlay, 
