--- a/css/main.css
+++ b/css/main.css
@@ -1140,10 +1140,25 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
+@media screen and (max-width: 767px) {
+  .filter__list {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 326px;
+  }
+}
 
 .filter__item {
   display: inline-block;
   margin-right: 8px;
+}
+@media screen and (max-width: 767px) {
+  .filter__item:nth-child(-n+3) {
+    margin-bottom: 15px;
+  }
 }
 .filter__item:last-child {
   margin-right: 0;
