--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -21,9 +21,15 @@
 
     &__list{
         display: flex;
-        justify-content: center; }
+        justify-content: center; 
 
-
+        @media screen and (max-width:767px) {
+    justify-content: flex-start; 
+    flex-wrap: wrap;
+    width: 326px;
+   
+}
+}
     }
 
 
@@ -31,7 +37,11 @@
         display: inline-block;
         margin-right: 8px; 
         
-    
+    @media screen and (max-width:767px) {
+        &:nth-child(-n + 3){
+            margin-bottom: 15px;
+        }
+    }
     
     &:last-child{margin-right: 0;} 
     }
