mobile menu, кроме черточек сделано

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -43,3 +43,6 @@
 @import"./components/filter-button";
 @import"./components/portfolio-filter";
 @import"./components/portfolio-samples";
+
+// Menu mobile phone
+@import"./components/menu-mobile"
