--- a/sass/components/_site-header.scss
+++ b/sass/components/_site-header.scss
@@ -1,9 +1,22 @@
 
 .site-header{
     display: flex;
+     border-bottom: 1px solid #ECECEC;
+
+    @media screen and (max-width:767px) {
+        padding-top: 16px;
+         padding-bottom: 16px; 
+    }
+    
+    @media screen and (min-width:768px) {
+        padding-top: 26px;
+         padding-bottom: 26px; 
+    }
+
+@media screen and (min-width:1200px) {
     padding-top: 24px;
      padding-bottom: 25px; 
-     border-bottom: 1px solid #ECECEC;
+}
      
  }
 
@@ -11,6 +24,8 @@
 
 
 .navigat, .auth {
+
+    
     display: flex;
     align-items: center;
     padding: 0;
@@ -23,78 +38,103 @@
 
 
 
-.navigat a{color:var(--main-text-colour);}
+.navigat a{
+    
+    color:var(--main-text-colour);}
 
 
 
 
 .auth{
-    margin-left: auto;
-&__item{
-    margin-right: 50px;}
-&__link, &-phone__link{
-    display: block;
-    color:var(--article-text-colour);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-    transition-property: all; 
-    transition-duration: 250ms;
-    transition-timing-function: 
-    cubic-bezier(0.4, 0, 0.2, 1);
-}
-}
-
-
-.header-studio__link{
-
-    .navigat &:hover, .navigat &:focus {color: var(--button-text-colour);}
-    
-    .navigat &.current{color: var(--button-text-colour);}
-    }
-
-
-    // .header-portfolio__link, .header-contact__link, .header-studio__link{display: block; }
-
-.navigat .header-portfolio__link.current{color: var(--button-text-colour);}
-
-
-.header{
-
-    &__item{margin-right: 50px;}
-    
-     &-contact__link{
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
-        text-decoration: none;
-        transition-property: all; 
-        transition-duration: 250ms;
-        transition-timing-function: 
-        cubic-bezier(0.4, 0, 0.2, 1);
-        }
-       
-    
-        &-studio__link, &-portfolio__link{
-            position: relative; 
-            display: flex;
-            transition-property: all; 
-            transition-duration: 250ms;
-            transition-timing-function: 
-            cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (max-width:767px){display: none;}
+    @media screen and (min-width:768px) {
+        margin-left: auto;  
+        &__item{
+            margin-right: 50px;}
+        &__link, &-phone__link{
+            display: block;
+            color:var(--article-text-colour);
             font-weight: 500;
             font-size: 14px;
             line-height: 1.14;
             letter-spacing: 0.02em;
             text-decoration: none;
             transition-property: all; 
-                transition-duration: 250ms;
-                transition-timing-function: 
-                cubic-bezier(0.4, 0, 0.2, 1);
+            transition-duration: 250ms;
+            transition-timing-function: 
+            cubic-bezier(0.4, 0, 0.2, 1);
         }
+    }
+    
+
+}
+
+
+.header-studio__link{
+    @media screen and (max-width:767px){display: none;}
+    @media screen and (min-width:768px) {.navigat &:hover, .navigat &:focus {color: var(--button-text-colour);}
+    
+    .navigat &.current{color: var(--button-text-colour);}}
+
+    
+    }
+
+
+  
+
+.navigat .header-portfolio__link.current{
+    @media screen and (min-width:768px) {color: var(--button-text-colour);}
+    }
+
+
+.header{
+    @media screen and (max-width:767px){display: none;}
+    @media screen and (min-width:768px) {
+        &__item{margin-right: 50px;}
+    
+        &-contact__link{
+           font-weight: 500;
+           font-size: 14px;
+           line-height: 1.14;
+           letter-spacing: 0.02em;
+           text-decoration: none;
+           transition-property: all; 
+           transition-duration: 250ms;
+           transition-timing-function: 
+           cubic-bezier(0.4, 0, 0.2, 1);
+           }
+          
+       
+           &-studio__link, &-portfolio__link{
+               position: relative; 
+               display: flex;
+               transition-property: all; 
+               transition-duration: 250ms;
+               transition-timing-function: 
+               cubic-bezier(0.4, 0, 0.2, 1);
+               font-weight: 500;
+               font-size: 14px;
+               line-height: 1.14;
+               letter-spacing: 0.02em;
+               text-decoration: none;
+               transition-property: all; 
+                   transition-duration: 250ms;
+                   transition-timing-function: 
+                   cubic-bezier(0.4, 0, 0.2, 1);
+           }
+
+    }
+    
+    }
+
+
+    .header-portfolio__link, .header-contact__link{
+
+
+        @media screen and (max-width:767px) {
+       display:none;
+    
+        }  
     }
 
 
