--- a/sass/components/_nav-icons.scss
+++ b/sass/components/_nav-icons.scss
@@ -16,12 +16,20 @@
 .icon{
 
         &-email, &-phone{
-            margin-right: 10px;
+           
              fill:var(--article-text-colour);
              transition-property: all; 
              transition-duration: 250ms;
              transition-timing-function: 
              cubic-bezier(0.4, 0, 0.2, 1);
+            
+             @media screen and (min-width:768px) {
+                margin-right: 8px;
+             }
+
+             @media screen and (min-width:1200px) {
+                margin-right: 10px;
+             }
         }
         }
 
