--- a/css/main.css
+++ b/css/main.css
@@ -82,13 +82,22 @@ body {
 }
 .current::after {
   position: absolute;
-  bottom: -35px;
   right: 0;
   content: "";
   width: 100%;
   height: 4px;
   background-color: var(--button-text-colour);
   border-radius: 2px;
+}
+@media screen and (min-width: 768px) {
+  .current::after {
+    bottom: -43px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .current::after {
+    bottom: -35px;
+  }
 }
 
 .container {
@@ -188,6 +197,17 @@ body {
     display: none;
   }
 }
+@media screen and (max-width: 1199px) {
+  .auth {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 @media screen and (min-width: 768px) {
   .auth {
     margin-left: auto;
@@ -209,6 +229,11 @@ body {
             transition-duration: 250ms;
     -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
             transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+@media screen and (max-width: 1199px) {
+  .auth__item:first-child {
+    margin-bottom: 10px;
   }
 }
 
@@ -238,7 +263,7 @@ body {
   }
 }
 @media screen and (min-width: 768px) {
-  .header__item {
+  .header__item:not(:last-child) {
     margin-right: 50px;
   }
   .header-contact__link {
@@ -282,6 +307,12 @@ body {
   }
 }
 
+@media screen and (max-width: 1199px) {
+  .header-contact__link:last-child {
+    margin-right: 80px;
+  }
+}
+
 .navigat__link {
   font-family: Raleway;
   font-weight: 700;
@@ -289,8 +320,17 @@ body {
   line-height: 1.36;
   text-decoration: none;
   display: block;
-  margin-right: 93px;
   color: var(--main-text-colour);
+}
+@media screen and (min-width: 768px) {
+  .navigat__link {
+    margin-right: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .navigat__link {
+    margin-right: 93px;
+  }
 }
 .navigat__icon {
   color: var(--button-text-colour);
@@ -312,7 +352,6 @@ body {
 }
 
 .icon-email, .icon-phone {
-  margin-right: 10px;
   fill: var(--article-text-colour);
   -webkit-transition-property: all;
   transition-property: all;
@@ -320,6 +359,16 @@ body {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .icon-email, .icon-phone {
+    margin-right: 8px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .icon-email, .icon-phone {
+    margin-right: 10px;
+  }
 }
 
 .container-hero {
@@ -1506,7 +1555,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 20px;
+  gap: 10px;
   text-decoration: none;
 }
 .mobile-socials__link {
@@ -1518,4 +1567,13 @@ body {
 
 .button-mobile:hover, .button-mobile:focus {
   fill: #2196F3;
+}
+
+.line {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  margin-left: 10px;
+  display: inline-block;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }/*# sourceMappingURL=main.css.map */
