--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,6 +6,9 @@
     margin-bottom: 20px;
     display: inline-block;
     color: var(--second-text-colour);
+    @media screen and (max-width:767px) {
+        
+    }
     }
 
 .site-footer{
@@ -38,3 +41,9 @@
 }
 
 
+.site-footer__contacts{
+    @media screen and (max-width:767px) {
+        padding-left: 124px;
+        align-items: center;
+    }
+}
